# manipulate-browser-component

./: Dockerfile  LICENSE  README.md  UserInterfaceBrowser.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
connection/: ConnectBrowserType.py
manipule_browser/: path.py  user_interface_browser.py
manipule_browser/connection/: connect_with_browser.py
manipule_browser/drivers/: driver_types.py
manipule_browser/drivers/local/: local_driver.py
manipule_browser/drivers/remote/: chrome_setup.py  firefox_setup.py  remote_driver.py
selenoid/: README.md
selenoid/browsers/: browsers.json
webdrivers/local/: LocalDriver.py  LocalDriverConfig.py
webdrivers/remote/: RemoteDriver.py  RemoteDriverConfig.py
