[tool.poetry]
name = "python-browser-manipulation"
version = "0.1.0"
description = ""
authors = ["Samuel Sublate <samuelsublate.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
